# Meeting-Intelligence-System

./: .dockerignore  .env.deploy.backup-20260209  .env.deploy.template  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  TESTING.md  _repo-context.md  deploy.sh  docker-compose.yml  schema.sql
.claude/: REPO-SYNC-INSTRUCTIONS.md  Template-CLAUDE.md_For-Code-Repos.md
agents/: code-review.md  meeting-intelligence-skill.md
docs/: DOC1-quick-start-guide.md  DOC2-technical-architecture-brief.md  DOC3-client-deploy-runbook.md  DOC4-breakglass-ops-runbook.md  DOC5-application-architecture.md  adr-011-database-backed-client-tokens.md  adr-013-infrastructure-level-tenant-isolation.md  agent-launch-prompts.md  backlog.md  chatgpt-implementation-prompt.md  deploy-marshall.md  (+15 more)
server/: .env.template  Dockerfile  pyproject.toml  requirements.txt
server/migrations/: 002_client_tokens.sql  003_refresh_token_usage.sql  004_oauth_refresh_tokens.sql
server/scripts/: export_client_data.py  manage_tokens.py  migrate.py
server/src/: __init__.py  admin.py  api.py  audit.py  config.py  database.py  dependencies.py  logging_config.py  main.py  mcp_server.py  oauth.py  oauth_provider.py  permissions.py  schemas.py  workspace_context.py
server/src/tools/: __init__.py  actions.py  decisions.py  fireflies.py  meetings.py  workspaces.py
server/tests/: test_admin.py  test_admin_tokens.py  test_audit.py  test_engine_registry.py  test_fail_closed.py  test_permissions.py  test_schema_endpoint.py  test_token_hash.py  test_token_workspace.py  test_validation.py  test_workspace_isolation.py
(+65 files in other folders)
