[project]
name = "server"
version = "0.1.0"
description = "Meeting Intelligence MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.8.0,<2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pyodbc>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "azure-identity>=1.15.0",
    "fastapi-azure-auth>=5.0.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.6",
    "azure-monitor-opentelemetry>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
